<resources>
    <string name="app_name">Telesalud</string>
    <string name="telesalud">Telesalud</string>
    <string name="nombres">Nombres</string>
    <string name="registro">Registro</string>
    <string name="apellidos">Apellidos</string>
    <string name="numero_de_tel_fono">Numero de teléfono</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="desea_registrarse">¿desea registrarse?</string>
    <string name="tienes_una_cuenta_inicia_ses_on">¿tienes una cuenta? Inicia sesíon.</string>
    <string name="el_tiempo_se_va">El tiempo se va ....</string>
    <string name="contactos">Contactos</string>
    <string name="contatos">Contatos</string>
    <string name="string_contactar">Contactar2</string>
    <string name="cargo">Cargo</string>
    <string name="horario_de_atencion">Horario de atencion</string>
    <string name="contactar">Contactar</string>
    <string name="nombre_doctor">Nombre Doctor</string>
    <string name="todo">TODO</string>
    <string name="perfil_3">perfil_3</string>
    <string name="perfil_2">perfil_2</string>
    <string name="perfil_1">perfil_1</string>
    <string name="registrar_datos">Registrar datos</string>
    <string name="imgregistrodatos">imgRegistroDatos</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="configuraciones">configuraciones</string>
    <string name="button">Button</string>
</resources>
